--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "shards-dashboard-lite-react",
+  "name": "awesomesearch.dashboard",
   "version": "1.0.0",
   "private": true,
-  "homepage": "./",
   "dependencies": {
     "camelize": "^1.0.0",
     "chart.js": "^2.7.3",
@@ -11,8 +10,8 @@
     "dateformat": "^3.0.3",
     "flux": "^3.1.3",
     "lodash.find": "^4.6.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
     "react-ga": "^2.5.6",
     "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
